gallery imgs overlaping menu fixed

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ section a:hover {
     background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1000;
 }
 
 .dropdown_content2lvl {
